Commit with Content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="contact.html">Your Name</a>
+              <a class="navbar-brand" href="contact.html">Miguel J. Nolla Burgos</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -32,12 +32,12 @@
         <div class="card mb-3" display:flex>
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="..." alt="...">
+                <img class="img-fluid" src="C:\Users\Liz Bur\Google Drive\IMG_0529.JPG" alt="Miguel Nolla">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">About Me</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">I am an aspiring full-stack developer. I currently reside in Orlando, Fl, though I am originally from San Juan, PR. I decided to pursue coding in late October of 2020. I had always been vastly interested in Web Development as well as I was challenged by the COVID-19 Pandemic to find a more secure form of employment. Thus far I have achieved an acute understanding of HTML and CSS. At the moment, I find myself fighting through the trenches of JavaScript. I am thrilled for the adventure and I look forward to many more.</p>
                   <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
               </div>
