--- a/contact.html
+++ b/contact.html
@@ -40,11 +40,11 @@
                   <div class="col-md-3">
             <div class="mb-3">
                 <label for="formGroupExampleInput" class="form-label">Name</label>
-                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Type Here...">
               </div>
               <div class="mb-3">
                 <label for="formGroupExampleInput2" class="form-label">Email</label>
-                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
+                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Type Here...">
               </div>
               <div class="mb-3">
                 <label for="formGroupExampleInput3" class="form-label">Message</label>
