--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="card mb-3" display:flex>
             <div class="row g-0">
               <div class="col-md-4">
-                <img class="img-fluid" src="C:\Users\Liz Bur\About-Me\IMG_0529.JPG" alt="Miguel Nolla">
+                <img class="img-fluid" src="https://github.com/mnollaburgos/About-Me/blob/main/IMG_0529.JPG?raw=true" alt="Miguel Nolla">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
