--- a/contact.html
+++ b/contact.html
@@ -6,55 +6,61 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <link rel="stylesheet" type="text/css" href="./Assets/style.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="contact.html">Miguel J. Nolla Burgos</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
+        <a class="navbar-brand text-white bg-info" href="contact.html">Miguel J. Nolla Burgos</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+    </nav>
 
         <div class="container-md">
-          <div class="row align-items-left">
+          <div class="row align-items-left p-3">
               <div class="col-md">Contact</div>
           </div>
 
           <div class="container-md">
-              <div class="row align-items-left">
+              <div class="row align-items-left p-3">
                   <div class="col-md-3">
-            <div class="mb-3">
-                <label for="formGroupExampleInput" class="form-label">Name</label>
-                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Type Here...">
-              </div>
+                    <div class="mb-3">
+                      <label for="formGroupExampleInput" class="form-label">Name</label>
+                       <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Type Here...">
+                    </div>
+                  </div>
+
+            <div class="col-md-3">
               <div class="mb-3">
                 <label for="formGroupExampleInput2" class="form-label">Email</label>
                 <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Type Here...">
               </div>
+            </div>
+            
+            <div class="col-md-3">
               <div class="mb-3">
                 <label for="formGroupExampleInput3" class="form-label">Message</label>
                 <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Type Here...">
                 <button type="button" class="btn btn-primary">Submit</button>
               </div>
               </div>
-              </div>
+            </div>
 
-        </div>
+    
 
     </body>
 
