Added some new color components

--- a/contact.html
+++ b/contact.html
@@ -30,38 +30,34 @@
         </div>
     </nav>
 
-        <div class="container-md">
+        <div id="contact-color" class="container-md">
           <div class="row align-items-left p-3">
-              <div class="col-md">Contact</div>
-          </div>
-
-          <div class="container-md">
-              <div class="row align-items-left p-3">
-                  <div class="col-md-3">
                     <div class="mb-3">
                       <label for="formGroupExampleInput" class="form-label">Name</label>
                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Type Here...">
                     </div>
-                  </div>
-
-            <div class="col-md-3">
+          </div>
+          <hr>
+          <div class="row align-items-left p-3">
               <div class="mb-3">
                 <label for="formGroupExampleInput2" class="form-label">Email</label>
                 <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Type Here...">
               </div>
-            </div>
-            
-            <div class="col-md-3">
+          </div>
+          <hr>
+          <div class="row align-items-left p-3">
               <div class="mb-3">
                 <label for="formGroupExampleInput3" class="form-label">Message</label>
                 <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Type Here...">
                 <button type="button" class="btn btn-primary">Submit</button>
               </div>
-              </div>
-            </div>
+          </div>
+        </div>
 
     
-
+       <footer>
+        <div class="footer fixed-bottom bg-light text-center p-3">Copyright©2020 Miguel J. Nolla Burgos</div>
+      </footer>
     </body>
 
 
