--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <hr class="dotted">
 
               <div class="row">
-                <div class="clearfix p-3">
+                <div class="clearfix px-3">
                   <img id="about-img" src="./Assets/IMG_0529.JPG" alt="Miguel Nolla" class="float-left">
                   <p class="d-inline">I am an aspiring full-stack developer. I currently reside in Orlando, Fl, though I am originally from San Juan, PR. I decided to pursue coding in late October of 2020. I had always been vastly interested in Web Development as well as I was challenged by the COVID-19 Pandemic to find a more secure form of employment. Thus far I have achieved an acute understanding of HTML and CSS. At the moment, I find myself fighting through the trenches of JavaScript. I am thrilled for the adventure and I look forward to many more. I love to talk about myself when I have nothing else to say.</p>
                 </div>
@@ -48,7 +48,7 @@
         </div>
       </main>
       <footer>
-        <div class="footer fixed-bottom bg-light text-center p-3"></div>
+        <div class="footer fixed-bottom bg-light text-center p-3">Copyright©2020 Miguel J. Nolla Burgos</div>
       </footer>
     </body>
 
